# sstatus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  TODO.md  config.example.toml
include/mpmcplusplus/: mpmcplusplus.h
include/sstatus/: ConfigParser.h  Control.h  Error.h  ErrorHandler.h  JsonFormatter.h  ShellInterpreter.h  StatusItem.h  StatusItemPadding.h  StatusItemSeparator.h  StatusItemThread.h  StreamWriter.h
include/sstatus/streamwriters/: SwaybarStreamWriter.h  TuiStreamWriter.h
src/: CMakeLists.txt  ConfigParser.cpp  Control.cpp  Error.cpp  ErrorHandler.cpp  ShellInterpreter.cpp  StatusItem.cpp  StatusItemPadding.cpp  StatusItemSeparator.cpp  StatusItemThread.cpp  StreamWriter.cpp  main.cpp
src/streamwriters/: SwaybarStreamWriter.cpp  TuiStreamWriter.cpp
